# todo

./: .env  Cargo.toml  README.md
migrations/2023-08-08-062152_create-user/: up.sql
migrations/2023-08-08-062357_creat-category-lookup/: up.sql
migrations/2023-08-08-062439_creat-category/: up.sql
src/: error.rs  lib.rs  main.rs  password.rs  query_root.rs
src/graphql_schema/: mod.rs
src/graphql_schema/category/mutation/: add_category.rs  mod.rs
src/graphql_schema/category/query/: get_category.rs  mod.rs
src/graphql_schema/category_lookup/mutation/: add_categorylookup.rs  mod.rs
src/graphql_schema/todo/mutation/: add_todo.rs  mod.rs
src/graphql_schema/todo/query/: get_todos.rs  mod.rs
src/graphql_schema/users/mutation/: mod.rs  sign_up.rs  verify_email.rs
src/graphql_schema/users/query/: get_user.rs  mod.rs
src/models/: category.rs  category_lookup.rs  mod.rs  new_category.rs  new_categorylookup.rs  new_todo.rs  new_user.rs  todo.rs  user.rs
src/mutation/: add_category.rs  add_categorylookup.rs  add_todo.rs  login.rs  mod.rs  sign_up.rs
src/query/: get_user.rs  login.rs  mod.rs
src/query/category/: mod.rs
src/query/users/: get_user.rs  mod.rs
